--- a/messenger/src/cssStyles/DashboardStyles.css
+++ b/messenger/src/cssStyles/DashboardStyles.css
@@ -9,7 +9,3 @@
     left:25vw;
     margin-left:6px;
 }
-.convos{
-    height:80vh;
-    overflow:"scroll";
-}
